# id001-djangoCRM-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
api/: manage.py
api/api/: settings.py
api/companies/: admin.py  models.py
api/companies/migrations/: 0001_initial.py
api/contacts/: admin.py  models.py
api/contacts/migrations/: 0001_initial.py
